<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>rm</groupId>
	<artifactId>tabou2</artifactId>
	<version>1.4.0</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath />
	</parent>

	<!-- Propriétés du projet -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<commons.io.version>2.17.0</commons.io.version>
		<httpclient.version>4.5.13</httpclient.version>
		<commons.lang3.version>3.17.0</commons.lang3.version>
		<javax.validation.version>2.0.1.Final</javax.validation.version>
		<javax.annotation.version>1.3.2</javax.annotation.version>
		<servlet-api.version>4.0.1</servlet-api.version>
		<jakarta.version>3.1.0</jakarta.version>
		<springdoc.version>2.6.0</springdoc.version>
		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
		<apache.directory.api.version>2.1.7</apache.directory.api.version>
		<mapstruct.version>1.6.2</mapstruct.version>
		<lombok.version>1.18.26</lombok.version>
		<log4j.version>2.24.1</log4j.version>
		<openapi.plugin.version>7.9.0</openapi.plugin.version>
		<swagger.version>2.2.25</swagger.version>
		<swagger.codegen.version>2.4.14</swagger.codegen.version>
		<compiler.plugin.version>3.13.0</compiler.plugin.version>
		<surefire.plugin.version>3.5.1</surefire.plugin.version>
		<commons.collections.version>4.4</commons.collections.version>
		<ocpsoft.rewrite.version>10.0.2.Final</ocpsoft.rewrite.version>
		<opensagres.xdocreport.version>2.0.6</opensagres.xdocreport.version>
		<jackson-datatype.version>2.15.2</jackson-datatype.version>
		<openapitools.version>0.2.6</openapitools.version>
		<openapi.version>2.6.0</openapi.version>
		<org.hibernate.version>8.0.1.Final</org.hibernate.version>

		<!-- Configuration SONAR -->
		<sonar.projectKey>${env.SONAR_KEY}${project.artifactId}</sonar.projectKey>
		<sonar.projectName>${project.artifactId}</sonar.projectName>

	</properties>

	<!-- Modules du projet -->
	<modules>
		<module>tabou2-facade</module>
		<module>tabou2-service</module>
		<module>tabou2-storage</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<!-- Modules -->
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-facade</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-front</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-storage</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-jul</artifactId>
				<version>${log4j.version}</version>
			</dependency>


			<!--Commons dependencies -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>

			<!-- Swagger dependencies -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger.version}</version>
			</dependency>
		
		
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-common</artifactId>
				<version>${openapi.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.api</groupId>
				<artifactId>api-all</artifactId>
				<version>${apache.directory.api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>

			<!-- Map Struct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-integration-spring -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-integration-spring</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-impl -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-impl</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-servlet</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${mysql.version}</version>
			</dependency>

			<!-- persistence -->
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${org.hibernate.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${javax.validation.version}</version>
			</dependency>

			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>${javax.annotation.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet-api.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- mapper -->
			<dependency>
				<groupId>com.github.joschi.jackson</groupId>
				<artifactId>jackson-datatype-threetenbp</artifactId>
				<version>${jackson-datatype.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>${openapitools.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.document.odt</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.template.freemarker</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.converter.odt.odfdom</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>

				<!-- Swagger -->
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>

				<!-- Generate Lombok annotation then Mapstruct classes -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<encoding>${project.build.sourceEncoding}</encoding>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>


			</plugins>
		</pluginManagement>
	</build>
</project>
